--- a/private.html
+++ b/private.html
@@ -1809,6 +1809,8 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
     title="newKatakana*(minwl: int = 3; maxwl: int = 10): string"><wbr />new<wbr />Katakana</a></li>
   <li><a class="reference" href="#iching,"
     title="iching*(): seq[string]"><wbr />iching</a></li>
+  <li><a class="reference" href="#ada,"
+    title="ada*(): seq[string]"><wbr />ada</a></li>
   <li><a class="reference" href="#hiragana,"
     title="hiragana*(): seq[string]"><wbr />hiragana</a></li>
   <li><a class="reference" href="#katakana,"
@@ -3712,6 +3714,13 @@ getNextMonday<pre class = "listing"><span class="Identifier">echo</span>  <span 
 
 
 </dd>
+<dt id="ada"><a name="ada,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">ada</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span></pre></dt>
+<dd>
+<p>ada</p>
+<p>returns a seq containing ada language symbols </p>
+
+
+</dd>
 <dt id="hiragana"><a name="hiragana,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">hiragana</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span></pre></dt>
 <dd>
 <p>hiragana</p>
@@ -3949,7 +3958,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-10-16 17:04:55 UTC</small>
+        <small>Made with Nim. Generated: 2015-10-16 21:02:32 UTC</small>
       </div>
     </div>
   </div>
