--- a/private.html
+++ b/private.html
@@ -3087,6 +3087,7 @@ forward declaration
 <p>print</p>
 <p>same as printLn without new line</p>
 <p>for extended colorset background colors use printStyled with styleReverse</p>
+<p>also see cecho </p>
 
 
 </dd>
@@ -3248,14 +3249,13 @@ forward declaration
 <p>to print and highlight all appearances of a substring</p>
 <p>styles may and in some cases not have the desired effect</p>
 <p>available styles :</p>
-<p>styleBright = 1,            ## bright text</p>
-<p>styleDim,                   ## dim text</p>
-<p>styleUnknown,               ## unknown</p>
-<p>styleUnderscore = 4,        ## underscored text</p>
-<p>styleBlink,                 ## blinking/bold text</p>
-<p>styleReverse = 7,           ## reverses currentforground and backgroundcolor</p>
-<p>styleHidden                 ## hidden text</p>
-<p>with a certain color</p>
+<p>styleBright = 1,            # bright text</p>
+<p>styleDim,                   # dim text</p>
+<p>styleUnknown,               # unknown</p>
+<p>styleUnderscore = 4,        # underscored text</p>
+<p>styleBlink,                 # blinking/bold text</p>
+<p>styleReverse = 7,           # reverses currentforground and backgroundcolor</p>
+<p>styleHidden                 # hidden text</p>
 <pre class = "listing"><span class="Comment"># this highlights all T in green and underscore them</span>
 <span class="Identifier">printStyled</span><span class="Punctuation">(</span><span class="StringLit">&quot;HELLO THIS IS A TEST&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;T&quot;</span><span class="Punctuation">,</span><span class="Identifier">green</span><span class="Punctuation">,</span><span class="Punctuation">{</span><span class="Identifier">styleUnderScore</span><span class="Punctuation">}</span><span class="Punctuation">)</span>
 
@@ -3960,7 +3960,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-10-16 21:32:32 UTC</small>
+        <small>Made with Nim. Generated: 2015-10-16 21:36:39 UTC</small>
       </div>
     </div>
   </div>
