--- a/private.html
+++ b/private.html
@@ -3286,9 +3286,7 @@ forward declaration
 <dd>
 <p>cecho</p>
 <p>color echo w/o new line</p>
-<blockquote><p><p>import private,strfmt</p>
-<p>cecho(salmon,&quot;{:&lt;10} : {} ==&gt; {} --&gt; {}&quot;.fmt(&quot;this &quot;, &quot;zzz &quot;,123 ,&quot; color is something else&quot;))</p>
-</p></blockquote>
+<blockquote><p>import private,strfmt cecho(salmon,&quot;{:&lt;10} : {} ==&gt; {} --&gt; {}&quot;.fmt(&quot;this &quot;, &quot;zzz &quot;,123 ,&quot; color is something else&quot;))</p></blockquote>
 
 
 </dd>
@@ -3296,9 +3294,7 @@ forward declaration
 <dd>
 <p>cechoLn</p>
 <p>color echo with new line</p>
-<blockquote><p><p>import private,strutils</p>
-<p>cechoLn(steelblue,&quot;We made it in $1 hours !&quot; % $5)</p>
-</p></blockquote>
+<blockquote><p>import private,strutils cechoLn(steelblue,&quot;We made it in $1 hours !&quot; % $5)</p></blockquote>
 
 
 </dd>
@@ -3960,7 +3956,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-10-16 21:36:39 UTC</small>
+        <small>Made with Nim. Generated: 2015-10-16 21:39:01 UTC</small>
       </div>
     </div>
   </div>
