--- a/private.html
+++ b/private.html
@@ -1637,11 +1637,11 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
   <li><a class="reference" href="#printLnColStr,string,varargs[string,]"
     title="printLnColStr*(colstr: string; mvastr: varargs[string, `$`])"><wbr />print<wbr />Ln<wbr />Col<wbr />Str</a></li>
   <li><a class="reference" href="#printBiCol,string,string,string,string"
-    title="printBiCol*(s: string; sep: string; colLeft: string = &quot;yellowgreen&quot;;
-            colRight: string = &quot;termwhite&quot;)"><wbr />print<wbr />Bi<wbr />Col</a></li>
+    title="printBiCol*(s: string; sep: string; colLeft: string = yellowgreen;
+            colRight: string = termwhite)"><wbr />print<wbr />Bi<wbr />Col</a></li>
   <li><a class="reference" href="#printLnBiCol,string,string,string,string"
-    title="printLnBiCol*(s: string; sep: string; colLeft: string = &quot;yellowgreen&quot;;
-              colRight: string = &quot;termwhite&quot;)"><wbr />print<wbr />Ln<wbr />Bi<wbr />Col</a></li>
+    title="printLnBiCol*(s: string; sep: string; colLeft: string = yellowgreen;
+              colRight: string = termwhite)"><wbr />print<wbr />Ln<wbr />Bi<wbr />Col</a></li>
   <li><a class="reference" href="#hline,int,string"
     title="hline*(n: int = tw; col: string = white)"><wbr />hline</a></li>
   <li><a class="reference" href="#hlineLn,int,string"
@@ -1691,15 +1691,15 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
   <li><a class="reference" href="#printLnColStr,string,varargs[string,]_2"
     title="printLnColStr*(colstr: string; mvastr: varargs[string, `$`])"><wbr />print<wbr />Ln<wbr />Col<wbr />Str</a></li>
   <li><a class="reference" href="#printBiCol,string,string,string,string_2"
-    title="printBiCol*(s: string; sep: string; colLeft: string = &quot;yellowgreen&quot;;
-            colRight: string = &quot;termwhite&quot;)"><wbr />print<wbr />Bi<wbr />Col</a></li>
+    title="printBiCol*(s: string; sep: string; colLeft: string = yellowgreen;
+            colRight: string = termwhite)"><wbr />print<wbr />Bi<wbr />Col</a></li>
   <li><a class="reference" href="#printLnBiCol,string,string,string,string_2"
-    title="printLnBiCol*(s: string; sep: string; colLeft: string = &quot;yellowgreen&quot;;
-              colRight: string = &quot;termwhite&quot;)"><wbr />print<wbr />Ln<wbr />Bi<wbr />Col</a></li>
+    title="printLnBiCol*(s: string; sep: string; colLeft: string = yellowgreen;
+              colRight: string = termwhite)"><wbr />print<wbr />Ln<wbr />Bi<wbr />Col</a></li>
   <li><a class="reference" href="#printHl,string,string,string"
-    title="printHl*(s: string; substr: string; col: string = &quot;termwhite&quot;)"><wbr />print<wbr />Hl</a></li>
+    title="printHl*(s: string; substr: string; col: string = termwhite)"><wbr />print<wbr />Hl</a></li>
   <li><a class="reference" href="#printLnHl,string,string,string"
-    title="printLnHl*(s: string; substr: string; col: string = &quot;termwhite&quot;)"><wbr />print<wbr />Ln<wbr />Hl</a></li>
+    title="printLnHl*(s: string; substr: string; col: string = termwhite)"><wbr />print<wbr />Ln<wbr />Hl</a></li>
   <li><a class="reference" href="#printStyledSimple,T,string,set[Style]_2"
     title="printStyledSimple*[T](ss: T; fg: string; astyle: set[Style])"><wbr />print<wbr />Styled<wbr />Simple</a></li>
   <li><a class="reference" href="#printStyled,T,string,string,set[Style]_2"
@@ -2963,14 +2963,14 @@ forward declaration
 forward declaration
 
 </dd>
-<dt id="printBiCol"><a name="printBiCol,string,string,string,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printBiCol</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">sep</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">colLeft</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;yellowgreen&quot;</span><span class="Other">;</span>
-                <span class="Identifier">colRight</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;termwhite&quot;</span><span class="Other">)</span></pre></dt>
+<dt id="printBiCol"><a name="printBiCol,string,string,string,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printBiCol</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">sep</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">colLeft</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">yellowgreen</span><span class="Other">;</span>
+                <span class="Identifier">colRight</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">termwhite</span><span class="Other">)</span></pre></dt>
 <dd>
 forward declaration
 
 </dd>
-<dt id="printLnBiCol"><a name="printLnBiCol,string,string,string,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnBiCol</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">sep</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">colLeft</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;yellowgreen&quot;</span><span class="Other">;</span>
-                  <span class="Identifier">colRight</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;termwhite&quot;</span><span class="Other">)</span></pre></dt>
+<dt id="printLnBiCol"><a name="printLnBiCol,string,string,string,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnBiCol</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">sep</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">colLeft</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">yellowgreen</span><span class="Other">;</span>
+                  <span class="Identifier">colRight</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">termwhite</span><span class="Other">)</span></pre></dt>
 <dd>
 forward declaration
 
@@ -3179,8 +3179,8 @@ forward declaration
 <pre class = "listing"><span class="Identifier">printLnColStr</span> <span class="Identifier">green</span><span class="Punctuation">,</span><span class="StringLit">&quot;Nice try 1&quot;</span><span class="Punctuation">,</span> <span class="FloatNumber">2.52234</span><span class="Punctuation">,</span> <span class="Operator">@</span><span class="Punctuation">[</span><span class="DecNumber">4</span><span class="Punctuation">,</span> <span class="DecNumber">5</span><span class="Punctuation">,</span> <span class="DecNumber">6</span><span class="Punctuation">]</span></pre>
 
 </dd>
-<dt id="printBiCol"><a name="printBiCol,string,string,string,string_2"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printBiCol</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">sep</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">colLeft</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;yellowgreen&quot;</span><span class="Other">;</span>
-                <span class="Identifier">colRight</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;termwhite&quot;</span><span class="Other">)</span></pre></dt>
+<dt id="printBiCol"><a name="printBiCol,string,string,string,string_2"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printBiCol</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">sep</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">colLeft</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">yellowgreen</span><span class="Other">;</span>
+                <span class="Identifier">colRight</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">termwhite</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>printBiCol</p>
 <p>echos a line in 2 colors based on a seperators first occurance</p>
@@ -3198,8 +3198,8 @@ forward declaration
 <span class="Identifier">printBiCol</span><span class="Punctuation">(</span><span class="StringLit">&quot;{} : {}     {}&quot;</span><span class="Operator">.</span><span class="Identifier">fmt</span><span class="Punctuation">(</span><span class="StringLit">&quot;Good Idea&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;Number&quot;</span><span class="Punctuation">,</span><span class="DecNumber">50</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="StringLit">&quot;:&quot;</span><span class="Punctuation">,</span><span class="Identifier">yellow</span><span class="Punctuation">,</span><span class="Identifier">green</span><span class="Punctuation">)</span></pre>
 
 </dd>
-<dt id="printLnBiCol"><a name="printLnBiCol,string,string,string,string_2"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnBiCol</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">sep</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">colLeft</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;yellowgreen&quot;</span><span class="Other">;</span>
-                  <span class="Identifier">colRight</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;termwhite&quot;</span><span class="Other">)</span></pre></dt>
+<dt id="printLnBiCol"><a name="printLnBiCol,string,string,string,string_2"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnBiCol</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">sep</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">colLeft</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">yellowgreen</span><span class="Other">;</span>
+                  <span class="Identifier">colRight</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">termwhite</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>printLnBiCol</p>
 <p>same as printBiCol but issues a new line</p>
@@ -3217,7 +3217,7 @@ forward declaration
 <span class="Identifier">printLnBiCol</span><span class="Punctuation">(</span><span class="StringLit">&quot;{} : {}     {}&quot;</span><span class="Operator">.</span><span class="Identifier">fmt</span><span class="Punctuation">(</span><span class="StringLit">&quot;Good Idea&quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;Number&quot;</span><span class="Punctuation">,</span><span class="DecNumber">50</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="StringLit">&quot;:&quot;</span><span class="Punctuation">,</span><span class="Identifier">yellow</span><span class="Punctuation">,</span><span class="Identifier">green</span><span class="Punctuation">)</span></pre>
 
 </dd>
-<dt id="printHl"><a name="printHl,string,string,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printHl</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">substr</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">col</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;termwhite&quot;</span><span class="Other">)</span></pre></dt>
+<dt id="printHl"><a name="printHl,string,string,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printHl</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">substr</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">col</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">termwhite</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>printHl</p>
 <p>print and highlight all appearances of a char or substring of a string</p>
@@ -3226,7 +3226,7 @@ forward declaration
 
 
 </dd>
-<dt id="printLnHl"><a name="printLnHl,string,string,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnHl</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">substr</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">col</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;termwhite&quot;</span><span class="Other">)</span></pre></dt>
+<dt id="printLnHl"><a name="printLnHl,string,string,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnHl</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">substr</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">col</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">termwhite</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>printHl</p>
 <p>print and highlight all appearances of a char or substring of a string</p>
@@ -3956,7 +3956,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-10-17 09:13:22 UTC</small>
+        <small>Made with Nim. Generated: 2015-10-17 09:53:38 UTC</small>
       </div>
     </div>
   </div>
