--- a/private.html
+++ b/private.html
@@ -3090,7 +3090,7 @@ forward declaration
 <p>print</p>
 <p>same as printLn without new line</p>
 <p>for extended colorset background colors use printStyled with styleReverse</p>
-<p>also see cecho </p>
+<p>also see cecho</p>
 
 
 </dd>
@@ -3105,12 +3105,13 @@ forward declaration
 <p>white,red,green,blue,yellow,cyan,magenta,black</p>
 <p>brightwhite,brightred,brightgreen,brightblue,brightyellow,</p>
 <p>brightcyan,brightmagenta,brightblack</p>
-<p>As a side effect we also can do this now :</p>
+<pre class = "listing"><span class="Identifier">printLn</span><span class="Punctuation">(</span><span class="StringLit">&quot;Yes ,  we made it.&quot;</span><span class="Punctuation">,</span><span class="Identifier">clrainbow</span><span class="Punctuation">,</span><span class="Identifier">brightyellow</span><span class="Punctuation">)</span> <span class="Comment"># background has no effect with font in  clrainbow</span>
+<span class="Identifier">printLn</span><span class="Punctuation">(</span><span class="StringLit">&quot;Yes ,  we made it.&quot;</span><span class="Punctuation">,</span><span class="Identifier">green</span><span class="Punctuation">,</span><span class="Identifier">brightyellow</span><span class="Punctuation">)</span></pre><p>As a side effect we also can do this now :</p>
 <pre class = "listing"><span class="Identifier">echo</span><span class="Punctuation">(</span><span class="Identifier">yellowgreen</span><span class="Punctuation">,</span><span class="StringLit">&quot;aha nice&quot;</span><span class="Punctuation">,</span><span class="Identifier">termwhite</span><span class="Punctuation">)</span>
 <span class="Identifier">echo</span><span class="Punctuation">(</span><span class="Identifier">rosybrown</span><span class="Punctuation">)</span>
 <span class="Identifier">echo</span><span class="Punctuation">(</span><span class="StringLit">&quot;grizzly bear&quot;</span><span class="Punctuation">)</span>
 <span class="Identifier">echo</span><span class="Punctuation">(</span><span class="Identifier">termwhite</span><span class="Punctuation">)</span>  <span class="Comment"># reset to usual terminal white color</span></pre><p>that is we print the string in yellowgreen , but need to reset the color manually</p>
-<p>even better use procs  cecho and cechoLn  below</p>
+<p>also see cechoLn</p>
 
 
 </dd>
@@ -3152,7 +3153,7 @@ forward declaration
 <dd>
 <p>printRainbow</p>
 <p>print multicolored string with styles , for available styles see printStyled</p>
-<p>may not work with certain Rune and currently supports terminal colors only</p>
+<p>may not work with certain Rune</p>
 <pre class = "listing"><span class="Identifier">printRainBow</span><span class="Punctuation">(</span><span class="StringLit">&quot;WoW So Nice&quot;</span><span class="Punctuation">,</span><span class="Punctuation">{</span><span class="Identifier">styleUnderScore</span><span class="Punctuation">}</span><span class="Punctuation">)</span>
 <span class="Identifier">printRainBow</span><span class="Punctuation">(</span><span class="StringLit">&quot;  --&gt; No Style&quot;</span><span class="Punctuation">,</span><span class="Punctuation">{</span><span class="Punctuation">}</span><span class="Punctuation">)</span></pre>
 
@@ -3162,7 +3163,7 @@ forward declaration
 <p>printLnRainbow</p>
 <p>print multicolored string with styles , for available styles see printStyled</p>
 <p>and issues a new line</p>
-<p>may not work with certain Rune and currently supports terminal colors only</p>
+<p>may not work with certain Rune</p>
 <pre class = "listing"><span class="Identifier">printLnRainBow</span><span class="Punctuation">(</span><span class="StringLit">&quot;WoW So Nice&quot;</span><span class="Punctuation">,</span><span class="Punctuation">{</span><span class="Identifier">styleUnderScore</span><span class="Punctuation">}</span><span class="Punctuation">)</span>
 <span class="Identifier">printLnRainBow</span><span class="Punctuation">(</span><span class="StringLit">&quot;Aha --&gt; No Style&quot;</span><span class="Punctuation">,</span><span class="Punctuation">{</span><span class="Punctuation">}</span><span class="Punctuation">)</span></pre>
 
@@ -3170,10 +3171,8 @@ forward declaration
 <dt id="printColStr"><a name="printColStr,string,string_2"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printColStr</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">colstr</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">astr</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>printColStr</p>
-<p>prints a string with a named color in colstr</p>
-<p>colors : green,red,cyan,yellow,white,black,blue,magenta,clrainbow</p>
-<blockquote><p>brightgreen,brightred,brightcyan,brightyellow,brightwhite,brightblue,brightmagenta</p></blockquote>
-<pre class = "listing"><span class="Identifier">printColStr</span><span class="Punctuation">(</span><span class="Identifier">green</span><span class="Punctuation">,</span><span class="StringLit">&quot;Nice, it is in green !&quot;</span><span class="Punctuation">)</span></pre>
+<p>prints a string with a named color in colstr </p>
+
 
 </dd>
 <dt id="printLnColStr"><a name="printLnColStr,string,varargs[string,]_2"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnColStr</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">colstr</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">mvastr</span><span class="Other">:</span> <span class="Identifier">varargs</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">,</span> <span class="Other">`</span><span class="Operator">$</span><span class="Other">`</span><span class="Other">]</span><span class="Other">)</span></pre></dt>
@@ -3182,7 +3181,7 @@ forward declaration
 <p>similar to printColStr but issues a writeLine() command that is</p>
 <p>every item will be shown on a new line in the same given color</p>
 <p>and most everything passed in will be converted to string</p>
-<pre class = "listing"><span class="Identifier">printLnColStr</span> <span class="Identifier">green</span><span class="Punctuation">,</span><span class="StringLit">&quot;Nice try 1&quot;</span><span class="Punctuation">,</span> <span class="FloatNumber">2.52234</span><span class="Punctuation">,</span> <span class="Operator">@</span><span class="Punctuation">[</span><span class="DecNumber">4</span><span class="Punctuation">,</span> <span class="DecNumber">5</span><span class="Punctuation">,</span> <span class="DecNumber">6</span><span class="Punctuation">]</span></pre>
+<pre class = "listing"><span class="Identifier">printLnColStr</span> <span class="Identifier">lightsalmon</span><span class="Punctuation">,</span><span class="StringLit">&quot;Nice try 1&quot;</span><span class="Punctuation">,</span> <span class="FloatNumber">2.52234</span><span class="Punctuation">,</span> <span class="Operator">@</span><span class="Punctuation">[</span><span class="DecNumber">4</span><span class="Punctuation">,</span> <span class="DecNumber">5</span><span class="Punctuation">,</span> <span class="DecNumber">6</span><span class="Punctuation">]</span></pre>
 
 </dd>
 <dt id="printBiCol"><a name="printBiCol,string,string,string,string_2"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printBiCol</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">sep</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">colLeft</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="Identifier">yellowgreen</span><span class="Other">;</span>
@@ -3966,7 +3965,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-10-19 09:04:54 UTC</small>
+        <small>Made with Nim. Generated: 2015-10-19 10:26:05 UTC</small>
       </div>
     </div>
   </div>
